fix bug on iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1524,6 +1524,8 @@ html {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -2474,6 +2476,10 @@ html {
 .btn--rounded {
   border-radius: 99px;
 }
+.btn--danger {
+  color: #fff;
+  background: #ed4337;
+}
 .btn[disabled], .btn--disabled {
   opacity: 0.5;
   pointer-events: none;
@@ -2851,12 +2857,18 @@ html {
   visibility: visible;
   translate: 0;
 }
+.form__dialog-heading {
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 20px;
+}
 .form__close-dialog {
   position: absolute;
   top: 0;
   right: 0;
   font-size: 3rem;
-  padding: 2px 20px;
+  padding: 12px 20px;
   opacity: 0.8;
 }
 .form__search {
@@ -2869,13 +2881,15 @@ html {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
   }
 }
 @media (max-width: 575.98px) {
   .form__search {
-    margin-top: 30px;
-    flex-direction: row-reverse;
+    border: 1px solid #d2d1d6;
+    margin: 10px 30px 0;
+    padding: 0 14px;
+    border-radius: 10px;
   }
 }
 .form__search-input {
@@ -2887,9 +2901,9 @@ html {
   width: 16px;
   margin-left: 10px;
 }
-@media (max-width: 575.98px) {
+@media (max-width: 991.98px) {
   .form__search-icon {
-    margin: 0 10px 0 0;
+    width: 20px;
   }
 }
 .form__option-list {
@@ -2898,13 +2912,19 @@ html {
   margin-top: 8px;
   overscroll-behavior: contain;
 }
+@supports (-webkit-touch-callout: none) {
+  .form__option-list {
+    padding-bottom: 300px;
+  }
+}
 .form__option {
   padding: 6px 20px;
   font-size: 1.4rem;
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    font-size: 1.6rem;
+    padding: 18px 30px;
   }
 }
 .form__option--current {
@@ -3085,7 +3105,7 @@ html {
   flex: 1;
   height: 100%;
   padding-left: 15px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 500;
   line-height: 142.857%;
 }
@@ -3321,8 +3341,8 @@ html {
   align-items: center;
   justify-content: flex-end;
   flex-wrap: wrap;
-  gap: 30px;
-  margin-top: 30px;
+  gap: 20px;
+  margin-top: 50px;
   padding-right: 20px;
 }
 @media (max-width: 767.98px) {
@@ -3333,7 +3353,7 @@ html {
 }
 @media (max-width: 575.98px) {
   .modal__bottom {
-    margin-top: 20px;
+    margin-top: 40px;
   }
 }
 @media (max-width: 767.98px) {
