--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -164,12 +164,19 @@ $error-color: #ed4337;
         }
     }
 
+    &__dialog-heading {
+        font-size: 2rem;
+        font-weight: 600;
+        text-align: center;
+        padding: 20px;
+    }
+
     &__close-dialog {
         position: absolute;
         top: 0;
         right: 0;
         font-size: 3rem;
-        padding: 2px 20px;
+        padding: 12px 20px;
         opacity: 0.8;
     }
 
@@ -183,12 +190,14 @@ $error-color: #ed4337;
         padding: 0 20px 4px;
 
         @include abstracts.screen(lg) {
-            height: 42px;
+            height: 48px;
         }
 
         @include abstracts.screen(sm) {
-            margin-top: 30px;
-            flex-direction: row-reverse;
+            border: 1px solid #d2d1d6;
+            margin: 10px 30px 0;
+            padding: 0 14px;
+            border-radius: 10px;
         }
 
         &-input {
@@ -201,8 +210,8 @@ $error-color: #ed4337;
             width: 16px;
             margin-left: 10px;
 
-            @include abstracts.screen(sm) {
-                margin: 0 10px 0 0;
+            @include abstracts.screen(lg) {
+                width: 20px;
             }
         }
     }
@@ -212,6 +221,10 @@ $error-color: #ed4337;
         overflow-y: auto;
         margin-top: 8px;
         overscroll-behavior: contain;
+
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px;
+        }
     }
 
     &__option {
@@ -219,7 +232,8 @@ $error-color: #ed4337;
         font-size: 1.4rem;
 
         @include abstracts.screen(lg) {
-            padding: 14px 20px;
+            font-size: 1.6rem;
+            padding: 18px 30px;
         }
 
         &--current {
